--- a/link.html
+++ b/link.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Link di MasterVanilla</title>
+<title>Link del Maestro</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -43,12 +43,16 @@
   Server Minecraft MasterVanilla (IP: 91.254.2.222 - Porta: 19132)
 </a>
 
+  <a href="https://docs.google.com/document/d/1UBi093fmBnCoFVNFA-7DijIH9Z0hsrdOP6UNrrnuPRE/edit?usp=sharing" target="_blank" rel="noopener noreferrer">
+  Guida per entrare su console 
+</a>
+
 <a href="https://www.tiktok.com/@il_maestroking" target="_blank" rel="noopener noreferrer">
-  TikTok - il_maestroking
+  TikTok 
 </a>
 
 <a href="https://www.instagram.com/themaestroboss" target="_blank" rel="noopener noreferrer">
-  Instagram - themaestroboss
+  Instagram 
 </a>
 
 <a href="https://discord.gg/cqjfHKkQUr" target="_blank" rel="noopener noreferrer">
@@ -60,11 +64,11 @@
 </a>
 
 <a href="https://www.youtube.com/@Il_M4estro" target="_blank" rel="noopener noreferrer">
-  YouTube - Il_M4estro
+  YouTube 
 </a>
 
 <a href="https://twitch.tv/il_m4estro" target="_blank" rel="noopener noreferrer">
-  Twitch - il_m4estro
+  Twitch 
 </a>
 
 </body>
