--- a/link.html
+++ b/link.html
@@ -37,7 +37,7 @@
 </style>
 </head>
 <body>
-<h1>Link di MasterVanilla</h1>
+<h1>Link del Maestro</h1>
 
 <a href="https://91.254.2.222:19132" target="_blank" rel="noopener noreferrer">
   Server Minecraft MasterVanilla (IP: 91.254.2.222 - Porta: 19132)
